# golem

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_common.hpp  bench_optional.cpp  bench_unordered_map.cpp  bench_variant.cpp  bench_vector.cpp
include/golem/: golem.hpp  optional.hpp  unordered_map.hpp  variant.hpp  vector.hpp
include/golem/detail/: allocator.hpp  lifetime.hpp  type_traits.hpp
results/: bench_optional.csv  bench_unordered_map.csv  bench_variant.csv  bench_vector.csv
scripts/: plot_benchmarks.py
tests/: CMakeLists.txt
tests/support/: tracked.hpp
tests/unit/: test_optional.cpp  test_unordered_map.cpp  test_variant.cpp  test_vector.cpp
